# PaperHub

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.ja.md  README.md  README.zh-CN.md  README.zh-TW.md  docker-compose.gpu.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  mcp_servers.docker.toml  mcp_servers.toml.example  pyproject.toml  ruff.toml
backend/benchmark/: .gitignore  README.md  __init__.py  cases.example.toml  cases.slides.example.toml  cases.smoke.toml  config.py  driver.py  judge.py  list_papers.py  resolve.py  runner.py  scorer.py
backend/benchmark/agent/: README.md  cli.py  corpus.py  eval_config.py  execute.py  experiment.py  grade.py  prompts.py  replay.py  replay_types.py  router.eval.toml  stages.py  store.py  sweep.py
backend/benchmark/agent/corpus/: router.core.jsonl  router.edge.jsonl  router.regression.jsonl
backend/benchmark/slide_calibration/: README.md  __init__.py  _common.py  _run_helpers.py  compare.py  run_multi.py  run_single.py  scorecard_a_template.md  scorecard_b_template.md  seed.py
backend/paperhub/: config.py
backend/paperhub.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/paperhub/agents/: research.py  router.py  state.py
backend/paperhub/api/: app.py  schemas.py  sse.py
backend/paperhub/api/routes/: chat.py  papers.py
backend/paperhub/data/: db.py  models.py  vectors.py
backend/paperhub/data/migrations/: 0001_initial.sql  0002_papers_extraction_tier.sql  0003_papers_source_dir.sql
backend/paperhub/llm/: adapter.py  prompts.py  prompts.yaml
backend/paperhub/mcp/: client.py  launchers.py  scopes.py
backend/paperhub/mcp/tools/: grobid_server.py
backend/paperhub/rag/: chunker.py  embedder.py  retriever.py
backend/paperhub/tracing/: redactor.py  tracer.py
backend/scripts/: backfill_assets.ps1  f2_1_worker_check.py  live_resume_test.py  reingest_all_papers.ps1  research_turn.ps1  run-benchmark.ps1  run-eval.ps1  smoke_chat.ps1  smoke_chat_real.ps1  smoke_marker.ps1  smoke_mcp_papers.ps1  smoke_mcp_web.ps1  smoke_memory.ps1  smoke_slides.ps1  smoke_sql_agent.ps1  start.ps1
backend/src/paperhub/: __init__.py  app.py  config.py  settings_overlay.py  settings_readiness.py  settings_registry.py
backend/src/paperhub/agents/: _layout_examples.py  _mcp_result.py  _newcommands.py  chitchat.py  gather_context.py  graph.py  memory_gate.py  memory_node.py  memory_recall.py  memory_tools.py  paper_digest.py  paper_qa_subagent.py  report_graph.py  report_pipeline.py  research.py  research_graph.py  research_pipeline.py  research_tools.py  router.py  sl_base_write.py  sl_cite.py  sl_emit.py  sl_format.py  sl_outline.py  sl_paper_brief.py  sl_plan_deck.py  sl_read.py  sl_render_slide.py  sl_seed.py  slide_agent.py  slide_agent_compile.py  slide_agent_tools.py  slide_layout_examples.yaml  slide_style_default.tex  sql_agent.py  state.py  stubs.py  style_commands.py  style_resolver.py
backend/src/paperhub/api/: chat.py  chunks.py  decks.py  deps.py  memories.py  papers.py  run_broker.py  sessions.py  settings.py  version.py
backend/src/paperhub/cli/: backfill_assets.py  mcp_up.py  reingest.py  replay.py  rerender_html.py
backend/src/paperhub/db/: connection.py  deck_slides.py  decks.py  fork.py  (+2 more)
backend/tests/: conftest.py  test_arxiv_client.py  test_assemble.py  test_backfill_assets.py  test_chat_cancel.py  test_chat_library_stats_cards.py  test_chat_resumable.py  test_chat_slides_sse.py  test_chat_sse.py  test_chitchat.py  test_chroma.py  test_chunker.py  test_chunks_api.py  test_config.py  test_connection.py  test_deck_command.py  test_deck_slides_db.py  test_deck_slides_map.py  test_deck_slides_schema.py  test_decks_api.py  test_decks_repo.py  test_decks_schema.py  test_extract.py  test_f4_select_and_budget_fixes.py  test_figure_inventory.py  test_figures.py  test_fork.py  test_frame_map.py  test_graph.py  test_health.py  test_html_to_markdown.py  test_latex_to_asset.py  test_litellm_adapter.py  test_markdown_strip.py  test_marker_blocks_to_chunks.py  test_marker_client.py  test_marker_health.py  test_marker_to_asset.py  test_marker_to_markdown.py  test_marker_worker.py  (+73 more)
backend/tests/agents/: test_assemble_newcommands.py  test_gather_context.py  test_layout_examples.py  test_paper_digest.py  test_report_graph_f4_5.py  test_report_graph_figure_staging.py  test_report_graph_round1_integration.py  test_report_stage_stream.py  test_research.py  test_router.py  test_sl_cite.py  test_sl_emit.py  test_sl_emit_figure_paragraph.py  test_sl_outline.py  test_sl_paper_brief.py  test_sl_plan_deck.py  test_sl_read.py  test_sl_render_slide.py  test_sl_seed.py  test_slide_agent.py  test_slide_agent_compile.py  test_slide_agent_outline.py  test_slide_agent_tools.py  test_slide_style_default.py  test_style_commands.py  test_style_resolver.py
backend/tests/api/: test_chat_slides_intent.py  test_chat_sse.py  test_deck_download_version_param.py  test_deck_manual_edit.py  test_decks_current_version_id.py  test_health.py  test_papers_import.py
backend/tests/benchmark_agent/: test_cli.py  test_corpus.py  test_execute.py  test_experiment.py  test_golden.py  test_grade.py  test_prompts.py  test_replay.py  test_stages.py  test_store.py  test_sweep.py
backend/tests/data/: test_db.py  test_models.py  test_vectors.py
backend/tests/db/: test_migrate_f4_5.py
backend/tests/fixtures/: marker_doc.json  marker_table_page.json  router_intents.jsonl
backend/tests/integration/: test_latex_first_ladder_e2e.py  test_paper_qa_e2e.py
backend/tests/llm/: test_adapter.py  test_prompts.py
backend/tests/mcp/: test_client_with_tracer.py  test_launcher.py  test_registry.py  test_scopes.py  test_server.py
backend/tests/models/: test_slide_outline_schema.py  test_sql_round_action.py
backend/tests/pipelines/: test_assemble_theme.py  test_history_pdf_cache.py
backend/tests/rag/: test_chunker.py  test_retriever.py
backend/tests/tracing/: test_redactor.py  test_tracer.py
marker_service/: Dockerfile  app.py  pyproject.toml  requirements.txt
(+390 files in other folders)
