[project]
name = "paperhub"
version = "0.1.0"
description = "PaperHub backend — UX-first chat shell with paper KB + RAG + slide pipeline."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.136.1",
    "langgraph>=1.2.0",
    "litellm>=1.85.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "sse-starlette>=3.4.4",
    "uvicorn[standard]>=0.47.0",
]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.13",
    "types-pyyaml>=6.0.12.20260510",
]

[project.scripts]
paperhub-replay = "paperhub.cli.replay:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.11"
plugins = ["pydantic.mypy"]
exclude = ["tests/fixtures/"]

[[tool.mypy.overrides]]
module = ["litellm.*", "sse_starlette.*"]
ignore_missing_imports = true
