[project]
name = "paperhub"
version = "2.27.2"
description = "PaperHub backend — UX-first chat shell with paper KB + RAG + slide pipeline."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "arxiv>=4.0.0",
    "fastapi>=0.136.1",
    "langgraph>=1.2.0",
    "litellm>=1.85.0",
    "mcp>=1.0.0",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "pylatexenc>=2.10",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.12.1",
    "pyyaml>=6.0.3",
    "sqlglot>=30.8.0",
    "sse-starlette>=3.4.4",
    "tiktoken>=0.13.0",
    "uvicorn[standard]>=0.47.0",
]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "respx>=0.23.1",
    "ruff>=0.15.13",
    "types-pyyaml>=6.0.12.20260510",
]

[project.scripts]
paperhub-replay = "paperhub.cli.replay:main"
paperhub-reingest = "paperhub.cli.reingest:main"
paperhub-backfill-assets = "paperhub.cli.backfill_assets:main"
paperhub-rerender-html = "paperhub.cli.rerender_html:main"
paperhub-mcp-up = "paperhub.cli.mcp_up:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.11"
plugins = ["pydantic.mypy"]
exclude = ["tests/fixtures/"]

[[tool.mypy.overrides]]
module = ["litellm.*", "sse_starlette.*", "arxiv.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pymupdf.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pylatexenc.*"]
ignore_missing_imports = true


