[project]
name = "paperhub-marker"
version = "0.1.0"
description = "FastAPI wrapper around datalab-to/marker for PaperHub PDF ingestion (SRS v2.19 §III-6)."
requires-python = ">=3.10"
dependencies = [
    "marker-pdf",
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
]

# Not an installable package — uv installs only the dependencies above
# (the service is a single app.py run via uvicorn).
[tool.uv]
package = false
