[project]
name = "paperhub-marker"
version = "2.31.2"
description = "FastAPI wrapper around datalab-to/marker for PaperHub PDF ingestion (SRS v2.19 §III-6)."
requires-python = ">=3.10"
dependencies = [
    # Pinned: marker-pdf's ConfigParser API shifts between minor releases (e.g.
    # page_range string-vs-list handling), so an unpinned rebuild can silently
    # break /extract. Bump deliberately + re-test against app.py.
    "marker-pdf==1.10.2",
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
]

# Not an installable package — uv installs only the dependencies above
# (the service is a single app.py run via uvicorn).
[tool.uv]
package = false
